--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://creativity-task-drab.vercel.app/" />
-<meta property="og:title" content="car" />
+<meta property="og:title" content="truck" />
 <meta property="og:description" content="The truck is moving on the road and there are some trees and some hills on the side of the road" />
 <meta property="og:image" content="/meta.jpg" />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content="https://creativity-task-drab.vercel.app/" />
-<meta property="twitter:title" content="car" />
+<meta property="twitter:title" content="truck" />
 <meta property="twitter:description" content="The truck is moving on the road and there are some trees and some hills on the side of the road" />
 <meta property="twitter:image" content="/meta.jpg" />
 
