--- a/index.html
+++ b/index.html
@@ -5,22 +5,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>truck</title>
-  <!-- Primary Meta Tags -->
-<meta name="title" content="car" />
+ <!-- Primary Meta Tags -->
+<title>truck</title>
+<meta name="title" content="truck" />
 <meta name="description" content="The car is moving on the road and there are some trees and some hills on the side of the road" />
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://creativity-task-drab.vercel.app/" />
 <meta property="og:title" content="truck" />
-<meta property="og:description" content="The truck is moving on the road and there are some trees and some hills on the side of the road" />
+<meta property="og:description" content="The car is moving on the road and there are some trees and some hills on the side of the road" />
 <meta property="og:image" content="/meta.jpg" />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content="https://creativity-task-drab.vercel.app/" />
 <meta property="twitter:title" content="truck" />
-<meta property="twitter:description" content="The truck is moving on the road and there are some trees and some hills on the side of the road" />
+<meta property="twitter:description" content="The car is moving on the road and there are some trees and some hills on the side of the road" />
 <meta property="twitter:image" content="/meta.jpg" />
 
 <!-- ===============css===================== -->
